--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -4,6 +4,7 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  captcha: 0
   ckeditor: 0
   coffee: 0
   config: 0
@@ -21,6 +22,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  honeypot: 0
   image: 0
   kint: 0
   layout_discovery: 0
@@ -32,6 +34,7 @@ module:
   path: 0
   quickedit: 0
   r4032login: 0
+  recaptcha: 0
   responsive_image: 0
   superfish: 0
   system: 0
