Adding SMTP module

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "drupal/r4032login": "1.x-dev",
         "drupal/recaptcha": "^2.2",
         "drupal/redirect": "^1.0",
+        "drupal/smtp": "^1.0@beta",
         "drupal/superfish": "^1.1",
         "drupal/token": "^1.1",
         "drupal/webform": "^5.0@RC",
