--- a/config/sync/captcha.captcha_point.node_session_form.yml
+++ b/config/sync/captcha.captcha_point.node_session_form.yml
@@ -1,6 +1,6 @@
 uuid: 757a9800-ed4a-468e-8ac5-f5d7a695f328
 langcode: en
-status: false
+status: true
 dependencies: {  }
 formId: node_session_form
 captchaType: default
