--- a/config/sync/core.entity_view_display.node.sponsor.default.yml
+++ b/config/sync/core.entity_view_display.node.sponsor.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.sponsor.field_sponsor_level
     - field.field.node.sponsor.field_sponsor_logo
     - field.field.node.sponsor.field_sponsor_website
+    - image.style.large
     - node.type.sponsor
   module:
     - field_layout
@@ -18,7 +19,7 @@ dependencies:
     - user
 third_party_settings:
   field_layout:
-    id: layout_onecol
+    id: layout_twocol
     settings: {  }
 id: node.sponsor.default
 targetEntityType: node
@@ -28,29 +29,29 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 2
     settings: {  }
     third_party_settings: {  }
-    region: content
+    region: second
   field_sponsor_level:
-    weight: 104
-    label: above
+    weight: 1
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: list_default
-    region: content
+    region: first
   field_sponsor_logo:
-    weight: 102
-    label: above
+    weight: 0
+    label: hidden
     settings:
-      image_style: ''
+      image_style: large
       image_link: ''
     third_party_settings: {  }
     type: image
-    region: content
+    region: first
   field_sponsor_website:
-    weight: 103
-    label: above
+    weight: 3
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
@@ -59,8 +60,10 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
-    region: content
+    region: second
   links:
-    weight: 100
-    region: content
+    weight: 4
+    region: bottom
+    settings: {  }
+    third_party_settings: {  }
 hidden: {  }
