--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -10,4 +10,8 @@ weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'create session content'
+  - 'delete own session content'
+  - 'edit own session content'
   - 'use text format html'
+  - 'view own unpublished content'
