Adding field_versions to session content type.

--- a/config/sync/core.entity_form_display.node.session.default.yml
+++ b/config/sync/core.entity_form_display.node.session.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.session.field_experience_level
     - field.field.node.session.field_session_links
     - field.field.node.session.field_track
+    - field.field.node.session.field_versions
     - node.type.session
   module:
     - field_layout
@@ -66,6 +67,12 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
+    region: content
+  field_versions:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   path:
     type: path
