--- a/config/sync/core.entity_form_display.node.session.default.yml
+++ b/config/sync/core.entity_form_display.node.session.default.yml
@@ -42,7 +42,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_attachements:
-    weight: 10
+    weight: 11
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
@@ -55,7 +55,7 @@ content:
     type: options_buttons
     region: content
   field_session_links:
-    weight: 11
+    weight: 12
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -69,10 +69,10 @@ content:
     type: options_buttons
     region: content
   field_versions:
-    weight: 26
+    weight: 10
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: options_buttons
     region: content
   path:
     type: path
