New Secondary region and styling for sponsor logos

--- a/web/themes/hive/hive.info.yml
+++ b/web/themes/hive/hive.info.yml
@@ -19,6 +19,7 @@ regions:
   content: 'Content'
   sidebar_first: 'First sidebar'
   sidebar_second: 'Second sidebar'
+  secondary: 'Secondary'
   sponsors: 'Sponsors'
   footer: 'Footer'
   footera: 'Footer A'
