Misc Additions: - Google Analytics - Maps field works now - Changes to Sponors view - New admin role

--- a/config/sync/captcha.captcha_point.webform_submission_contact_add_form.yml
+++ b/config/sync/captcha.captcha_point.webform_submission_contact_add_form.yml
@@ -3,5 +3,5 @@ langcode: en
 status: true
 dependencies: {  }
 formId: webform_submission_contact_add_form
-captchaType: recaptcha/reCAPTCHA
+captchaType: default
 label: webform-submission-contact-add-form
