--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "drupal/core": "~8.4",
         "drupal/crop": "^1.3",
         "drupal/devel": "1.x-dev",
+        "drupal/google_analytics": "^2.2",
+        "drupal/googleanalytics": "1.x-dev",
         "drupal/honeypot": "^1.27",
         "drupal/image_widget_crop": "^2.1",
         "drupal/masquerade": "^2.0@beta",
@@ -34,6 +36,7 @@
         "drupal/r4032login": "1.x-dev",
         "drupal/recaptcha": "^2.2",
         "drupal/redirect": "^1.0",
+        "drupal/simple_gmap": "^1.4",
         "drupal/smtp": "^1.0@beta",
         "drupal/superfish": "^1.1",
         "drupal/token": "^1.1",
