--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -22,6 +22,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  google_analytics: 0
   honeypot: 0
   image: 0
   kint: 0
@@ -36,6 +37,7 @@ module:
   r4032login: 0
   recaptcha: 0
   responsive_image: 0
+  simple_gmap: 0
   smtp: 0
   superfish: 0
   system: 0
