--- a/config/sync/block.block.needasessionidea.yml
+++ b/config/sync/block.block.needasessionidea.yml
@@ -1,22 +1,22 @@
-uuid: 642d0c6d-696f-4bf1-8e5c-95bf86189098
+uuid: 7afd46a6-dda4-4ee3-9977-baf33366aa7e
 langcode: en
 status: true
 dependencies:
   content:
-    - 'block_content:block:9491713b-7dff-4200-bf57-0edce4d1129a'
+    - 'block_content:block:0737bd78-00f9-4574-a28d-c0c2c0dc1758'
   module:
     - block_content
     - system
   theme:
     - hive
-id: sessionideas
+id: needasessionidea
 theme: hive
 region: secondary
 weight: 0
 provider: null
-plugin: 'block_content:9491713b-7dff-4200-bf57-0edce4d1129a'
+plugin: 'block_content:0737bd78-00f9-4574-a28d-c0c2c0dc1758'
 settings:
-  id: 'block_content:9491713b-7dff-4200-bf57-0edce4d1129a'
+  id: 'block_content:0737bd78-00f9-4574-a28d-c0c2c0dc1758'
   label: 'Need a Session Idea?'
   provider: block_content
   label_display: visible
