--- a/config/sync/views.view.community_supporters.yml
+++ b/config/sync/views.view.community_supporters.yml
@@ -54,7 +54,14 @@ display:
           items_per_page: 100
           offset: 0
       style:
-        type: default
+        type: html_list
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          type: ul
+          wrapper_class: item-list
+          class: ''
       row:
         type: fields
         options:
