--- a/config/sync/views.view.presenters.yml
+++ b/config/sync/views.view.presenters.yml
@@ -1,21 +1,15 @@
-uuid: 2eed3ae2-bdaf-465a-9633-fd67341add34
+uuid: 6c9d38e5-f24a-404a-81d8-eff601284dd1
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.body
-    - field.storage.node.field_experience_level
-    - field.storage.node.field_track
-    - field.storage.node.field_versions
+    - field.storage.user.field_drupal_org_user
     - node.type.session
-    - system.menu.main
   module:
     - node
-    - options
-    - text
     - user
-id: sessions
-label: Sessions
+id: presenters
+label: Presenters
 module: views
 description: ''
 tag: ''
@@ -55,27 +49,63 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: none
         options:
-          items_per_page: 50
           offset: 0
-          id: 0
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: table
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          override: true
+          sticky: false
+          caption: ''
+          summary: ''
+          description: ''
+          columns:
+            title: title
+            field_drupal_org_user: field_drupal_org_user
+            mail: mail
+            name: name
+          info:
+            title:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_drupal_org_user:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            mail:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            name:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          default: '-1'
+          empty_table: false
       row:
         type: fields
+        options:
+          inline: {  }
+          separator: ''
+          hide_empty: false
+          default_field_elements: true
       fields:
         title:
           id: title
@@ -83,6 +113,7 @@ display:
           field: title
           entity_type: node
           entity_field: title
+          label: ''
           alter:
             alter_text: false
             make_link: false
@@ -100,7 +131,6 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Title
           exclude: false
           element_type: ''
           element_class: ''
@@ -124,76 +154,14 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        body:
-          id: body
-          table: node__body
-          field: body
-          relationship: none
+        field_drupal_org_user:
+          id: field_drupal_org_user
+          table: user__field_drupal_org_user
+          field: field_drupal_org_user
+          relationship: uid
           group_type: group
           admin_label: ''
-          label: Body
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: text_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_track:
-          id: field_track
-          table: node__field_track
-          field: field_track
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Track
+          label: ''
           exclude: false
           alter:
             alter_text: false
@@ -226,7 +194,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -235,8 +203,9 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: list_default
-          settings: {  }
+          type: string
+          settings:
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -248,14 +217,14 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_versions:
-          id: field_versions
-          table: node__field_versions
-          field: field_versions
-          relationship: none
+        mail:
+          id: mail
+          table: users_field_data
+          field: mail
+          relationship: uid
           group_type: group
           admin_label: ''
-          label: Versions
+          label: ''
           exclude: false
           alter:
             alter_text: false
@@ -288,7 +257,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -297,7 +266,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: list_default
+          type: basic_string
           settings: {  }
           group_column: value
           group_columns: {  }
@@ -309,15 +278,17 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: user
+          entity_field: mail
           plugin_id: field
-        field_experience_level:
-          id: field_experience_level
-          table: node__field_experience_level
-          field: field_experience_level
-          relationship: none
+        name:
+          id: name
+          table: users_field_data
+          field: name
+          relationship: uid
           group_type: group
           admin_label: ''
-          label: Experience
+          label: ''
           exclude: false
           alter:
             alter_text: false
@@ -350,7 +321,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -359,8 +330,9 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: list_default
-          settings: {  }
+          type: user_name
+          settings:
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -371,60 +343,9 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: user
+          entity_field: name
           plugin_id: field
-        view_node:
-          id: view_node
-          table: node
-          field: view_node
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: View
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          text: view
-          entity_type: node
-          plugin_id: entity_link
-          output_url_as_text: false
-          absolute: false
       filters:
         status:
           value: '1'
@@ -461,79 +382,29 @@ display:
           exposed: false
           expose:
             label: ''
-      title: Sessions
-      header:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          tokenize: false
-          content:
-            value: '<a href="/user/login?destination=/node/add/session" alt="Submit a session" class="button">Submit a Session</a>'
-            format: html
-          plugin_id: text
+      header: {  }
       footer: {  }
-      empty:
-        area:
-          id: area
-          table: views
-          field: area
+      empty: {  }
+      relationships:
+        uid:
+          id: uid
+          table: node_field_data
+          field: uid
           relationship: none
           group_type: group
-          admin_label: ''
-          empty: true
-          tokenize: false
-          content:
-            value: 'No sessions found.'
-            format: html
-          plugin_id: text
-      relationships: {  }
+          admin_label: author
+          required: false
+          entity_type: node
+          entity_field: uid
+          plugin_id: standard
       arguments: {  }
       display_extenders: {  }
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.body'
-        - 'config:field.storage.node.field_experience_level'
-        - 'config:field.storage.node.field_track'
-        - 'config:field.storage.node.field_versions'
-  page_1:
-    display_plugin: page
-    id: page_1
-    display_title: Page
-    position: 1
-    display_options:
-      display_extenders: {  }
-      path: sessions
-      menu:
-        type: normal
-        title: Sessions
-        description: ''
-        expanded: false
-        parent: ''
-        weight: -40
-        context: '0'
-        menu_name: main
-    cache_metadata:
-      max-age: 0
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url.query_args
-        - 'user.node_grants:view'
-        - user.permissions
-      tags:
-        - 'config:field.storage.node.body'
-        - 'config:field.storage.node.field_experience_level'
-        - 'config:field.storage.node.field_track'
-        - 'config:field.storage.node.field_versions'
+        - 'config:field.storage.user.field_drupal_org_user'
