--- a/config/sync/core.entity_form_display.node.time_slot.default.yml
+++ b/config/sync/core.entity_form_display.node.time_slot.default.yml
@@ -1,36 +1,29 @@
-uuid: a614568a-7401-494c-b856-937fba9361e3
+uuid: 56f04ad6-65b3-4ffb-8f78-8e4f2f7276eb
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.session.body
-    - field.field.node.session.field_attachements
-    - field.field.node.session.field_experience_level
-    - field.field.node.session.field_session_links
-    - field.field.node.session.field_session_room
-    - field.field.node.session.field_time_slot
-    - field.field.node.session.field_track
-    - field.field.node.session.field_versions
-    - node.type.session
+    - field.field.node.time_slot.body
+    - field.field.node.time_slot.field_session_room
+    - field.field.node.time_slot.field_time_slot
+    - node.type.time_slot
   module:
     - field_layout
-    - file
     - layout_discovery
-    - link
     - path
     - text
 third_party_settings:
   field_layout:
     id: layout_onecol
     settings: {  }
-id: node.session.default
+id: node.time_slot.default
 targetEntityType: node
-bundle: session
+bundle: time_slot
 mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 7
+    weight: 121
     settings:
       rows: 9
       summary_rows: 3
@@ -39,33 +32,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 2
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_attachements:
-    weight: 11
-    settings:
-      progress_indicator: throbber
-    third_party_settings: {  }
-    type: file_generic
-    region: content
-  field_experience_level:
-    weight: 9
-    settings: {  }
-    third_party_settings: {  }
-    type: options_buttons
-    region: content
-  field_session_links:
-    weight: 12
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
-    region: content
   field_session_room:
-    weight: 26
+    weight: 122
     settings:
       match_operator: CONTAINS
       size: 60
@@ -74,7 +46,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_time_slot:
-    weight: 27
+    weight: 123
     settings:
       match_operator: CONTAINS
       size: 60
@@ -82,21 +54,9 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_track:
-    weight: 8
-    settings: {  }
-    third_party_settings: {  }
-    type: options_buttons
-    region: content
-  field_versions:
-    weight: 10
-    settings: {  }
-    third_party_settings: {  }
-    type: options_buttons
-    region: content
   path:
     type: path
-    weight: 5
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -104,26 +64,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 3
+    weight: 15
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 120
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 16
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: -5
     region: content
     settings:
       size: 60
@@ -131,7 +91,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 1
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
