--- a/config/sync/core.entity_view_display.node.session.default.yml
+++ b/config/sync/core.entity_view_display.node.session.default.yml
@@ -7,6 +7,8 @@ dependencies:
     - field.field.node.session.field_attachements
     - field.field.node.session.field_experience_level
     - field.field.node.session.field_session_links
+    - field.field.node.session.field_session_room
+    - field.field.node.session.field_time_slot
     - field.field.node.session.field_track
     - field.field.node.session.field_versions
     - node.type.session
@@ -37,7 +39,8 @@ content:
   field_attachements:
     weight: 1
     label: above
-    settings: {  }
+    settings:
+      use_description_as_link_text: true
     third_party_settings: {  }
     type: file_default
     region: content
@@ -59,6 +62,22 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
+    region: content
+  field_session_room:
+    weight: 7
+    label: inline
+    settings:
+      link: false
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_time_slot:
+    weight: 8
+    label: inline
+    settings:
+      link: false
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_track:
     weight: 3
