--- a/web/themes/hive/package.json
+++ b/web/themes/hive/package.json
@@ -5,27 +5,27 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "breakpoint-sass": "~2.7.0",
     "del": "^2.2.0",
     "eslint": "^2.9.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sass-glob": "^1.0.6",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-eslint": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.2.2",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-sass": "^2.3.2",
+    "gulp-sass-glob": "^1.0.6",
     "gulp-sass-lint": "^1.1.1",
     "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
     "node-sass-import-once": "^1.2.0",
+    "normalize-scss": "^6.0.0",
     "sass-lint": "^1.7.0",
     "support-for": "^1.0.6",
-    "typey": "^1.0.0",
-    "breakpoint-sass": "~2.7.0",
     "susy": "^2.2.12",
-    "normalize-scss": "^6.0.0"
+    "typey": "^1.0.0"
   },
   "private": true,
   "scripts": {
